# everything

./: .gitignore  Dockerfile  README.md  WORKSPACE
note/: BUILD.bazel
note/scripts/: install.sh
note/src/: BUILD.bazel
note/src/cmd/: BUILD.bazel
scripts/: install-all.sh
tasky/: .gitignore  BUILD.bazel  README.markdown  WORKSPACE
tasky/scripts/: install.sh
tasky/src/: BUILD.bazel  tasky.py
tasky/src/lib/: BUILD.bazel  config.py  lineeditor.py  scrollinglistbox.py  taskwarrior.py  taskwidget.py
