package(default_visibility = ["//visibility:public"])
load("@io_bazel_rules_rust//rust:rust.bzl", "rust_binary")

rust_binary(
  name = "note",
  srcs = ["//note/src:main.rs"],
  deps = [
    "//third_party/cargo:docopt",
    "//third_party/cargo:serde",
    "//third_party/cargo:serde_derive",
    "//note/src/cmd",
    "//note/src:util",
  ],
)
