package(default_visibility = ["//visibility:public"])
load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library")

rust_library(
  name = "add",
  srcs = [":add.rs"],
  deps = ["//note/src:util"],
)

rust_library(
  name = "cat",
  srcs = [":cat.rs"],
  deps = ["//note/src:util"],
)

rust_library(
  name = "edit",
  srcs = [":edit.rs"],
  deps = ["//note/src:util"],
)

rust_library(
  name = "ls",
  srcs = [":ls.rs"],
  deps = [
    "//third_party/cargo:termion",
    "//note/src:util",
  ],
)

rust_library(
  name = "rm",
  srcs = [":rm.rs"],
  deps = [
    "//third_party/cargo:text_io",
    "//note/src:util",
  ],
)

rust_library(
  name = "cmd",
  srcs = [":cmd.rs"],
  deps = [
    "//note/src:util",
    ":add",
    ":cat",
    ":edit",
    ":ls",
    ":rm",
  ],
)
