package(default_visibility = ["//visibility:public"])
load("@io_bazel_rules_python//python:python.bzl", "py_library")

py_library(name = "config", srcs = [":config.py"])
py_library(name = "taskwarrior", srcs = [":taskwarrior.py"])

py_library(
  name = "ui",
  srcs = [
    ":lineeditor.py",
    ":scrollinglistbox.py",
    ":taskwidget.py"
  ]
)
